--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,14 @@ MAIL_ENCRYPTION=null
 PUSHER_KEY=
 PUSHER_SECRET=
 PUSHER_APP_ID=
+
+PRIVATE_KEY=21e256ab3b8ea174a24656746547a20a
+
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.163.com
+MAIL_PORT=25
+MAIL_USERNAME=goodboytxw@163.com
+MAIL_PASSWORD=txw19940220
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=goodboytxw@163.com
+MAIL_FROM_NAME=TalkingMore管理员
